tests/ui/option_slice.stderr
error: unsupported element type of Option
 --> tests/ui/option_slice.rs:4:19
  |
4 |         fn f() -> Option<&'static [u8]>;
  |                   ^^^^^^^^^^^^^^^^^^^^^
